syntax = "proto3";

package FKVerifyCodeGrpc;

service VerifyCodeService {
	rpc GetVerifyCode (VerifyCodeRequestBody) returns (VerifyCodeResponseBody) {}
}

message VerifyCodeRequestBody {
	int32 request_type = 1;
	// data
	string email = 2;
}

message VerifyCodeResponseBody {
	int32 status_code = 1;  //不是赋值，而是指定唯一编号
	string message = 2;
	// data
	int32 request_type = 3;
	string email = 4;
	string verify_code = 5;
}